# cftoy

./: .gitignore  CHANGELOG.md  cftoy.cabal  flake.nix  stack.yaml
app/: Main.hs
app/Codeforces/: API.hs  Types.hs
nix/: package.nix
