cabal-version:      3.0
name:               cftoy
version:            0.1.0.0
homepage:           https://github.com/ProggerX/cftoy
license:            GPL-3.0-only
license-file:       LICENSE
author:             ProggerX
maintainer:         x@proggers.ru
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable cftoy
    import:           warnings
    main-is:          Main.hs
    other-modules: Codeforces.Types, Codeforces.API
    build-depends:    base ^>=4.18.2.1, req, text, aeson, bytestring, telegram-bot-simple, telegram-bot-api, containers, unordered-containers, vector
    hs-source-dirs:   app
    default-language: Haskell2010
