cabal-version:   3.0
name:            cftoy
version:         0.1.0.0
homepage:        https://github.com/ProggerX/cftoy
license:         GPL-3.0-only
license-file:    LICENSE
author:          ProggerX
maintainer:      x@proggers.ru
category:        Network
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

executable cftoy
  import:           warnings
  main-is:          Main.hs
  other-modules:
    Codeforces.API
    Codeforces.Types

  build-depends:
    , aeson
    , base                 ^>=4.18.2.1
    , lens
    , telegram-bot-api
    , telegram-bot-simple
    , text
    , wreq

  hs-source-dirs:   app
  default-language: GHC2021
